# github_release_stats

./: .gitignore  Cargo.toml  README.md  settings.yaml
src/: common.rs  features.rs  main.rs  settings.yaml  urls.rs
src/common/: helpers.rs  models.rs
src/common/api/: api_client.rs
src/common/helpers/config_parser/: parse.rs
src/common/helpers/fetch_request/: github.rs
src/common/models/: github_releases.rs  settings.rs
src/features/tabulation/: stats.rs
