[package]
name = "github_release_stats"
version = "0.1.0"
edition = "2018"
authors = ["Ganesh Rathinavel<ganeshrvel@outlook.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.64"
serde_derive = "1.0.126"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
prettytable-rs = "^0.8"
